<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/sms_count_text_view"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/ham_button_count"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_display_textView" />

    <TextView
        android:id="@+id/spam_count_text_view"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="@string/spam_button_count"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_display_textView" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="354dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/app_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sms_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="155dp"
        android:layout_height="105dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:contentDescription="Ham folder button"
        android:onClick="listSms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_description"
        app:srcCompat="@drawable/folderyellowdragaccepticon" />

    <ImageButton
        android:id="@+id/spam_button"
        android:layout_width="157dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="Spam folder button"
        android:onClick="listSpamSms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/sms_button"
        app:layout_constraintTop_toBottomOf="@+id/app_description"
        app:srcCompat="@drawable/folderredicon" />

    <TextView
        android:id="@+id/sms_display_textView"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ham_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_button" />

    <TextView
        android:id="@+id/spam_display_textView"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:gravity="center"
        android:text="@string/spam_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spam_button" />

</android.support.constraint.ConstraintLayout>